@@ -9,7 +9,7 @@
 {% block content %}
 <h2 class="fancy">Latest News</h2>
 <ul>
-<li>cocos Live v0.3.3 released <small><i><b>2009-07-14</b></i></small></li>
+<li>cocos Live v0.3.4 released <small><i><b>2009-08-06</b></i></small></li>
 <li><i>See more news here: <a href="news">more news</a></i></li>
 </ul>
 
